# CVNP2646-CourseWork

./: README.md
capstone/: AI_USAGE.md  README.md  Security_Log_Correlation_Engine.md  __init__.py  config.json  input_sample.json  main.py  output_sample.json  pyproject.toml  security_correlation_engine.py  test_security_correlation_engine.py  threat_indicators.json
capstone/results/: alert_report.json  attack_chains.json  correlated_events.json
week10/: README.md  audit_report.json  audit_report.txt  permissions_auditor.py  roles.json  users.json
week11/: README.md  drift_checker.py
week12/: README.md  __init__.py  network_monitor.py  results.json  test_network_monitor.py
week4/: threat_report.txt
week4/scanner/: scan_report_192_168_1_100.json
week5/: file_organizer.py
week6/: README.md  auth_scanner.py  incident_report.json  incident_report.txt
week7/: README.md  backup_config.json  broken.json  json_parser.py  schema.json
week8/: README.md  firewall_blocklist.json  siem_feed.json  summary_report.txt  threat_aggregator.py  vendor_a.json  vendor_b.json  vendor_c.json
week9/: README.md  high_risk_report.json  host_inventory.json  patch_summary.txt  patch_tracker.py
