[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "security-log-correlation-engine"
version = "0.1.0"
description = "Security log correlation engine for CVNP2646 capstone project."
readme = "capstone/README.md"
requires-python = ">=3.11"
authors = [
  {name = "Anthony Moretto"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
security-correlation-engine = "capstone.main:main"
